--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Jekyll configuration for Open SDG platform
 
 # Tell the Remote Theme plugin to use the Open SDG platform (Jekyll theme).
-remote_theme: open-sdg/open-sdg@css-override
+remote_theme: open-sdg/open-sdg@global-national-comparison
 
 # Replace this title as needed.
 title: general.site_title
